.tempCodeRunnerFile.txt

Example.java:11: error: ';' expected
      int y = in.nextInt()
                          ^
1 error
Sun 23 Feb 2020 22:36:41 CST
Input first number: Exception in thread "main" java.util.InputMismatchException
	at java.util.Scanner.throwFor(Scanner.java:864)
	at java.util.Scanner.next(Scanner.java:1485)
	at java.util.Scanner.nextInt(Scanner.java:2117)
	at java.util.Scanner.nextInt(Scanner.java:2076)
	at Example.main(Example.java:9)
Sun 23 Feb 2020 22:36:48 CST
Sun 23 Feb 2020 22:36:58 CST
Input first number: Input second number: Input third number: All numbers are different
Sun 23 Feb 2020 22:37:01 CST
